Módulos mejorados (2 de 5)

--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-02-01 23:18-0600\n"
+"PO-Revision-Date: 2021-03-23 04:08-0600\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1720,7 +1720,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.5.rst:1061
 msgid "difflib"
-msgstr ""
+msgstr "difflib"
 
 #: ../Doc/whatsnew/3.5.rst:1063
 msgid ""
@@ -1730,6 +1730,11 @@ msgid ""
 "\"ISO-8859-1\"`` to ``\"utf-8\"``. (Contributed by Berker Peksag in :issue:"
 "`2052`.)"
 msgstr ""
+"Ahora el juego de caracteres de los documentos HTML generado por :meth:"
+"`HtmlDiff.make_file() <difflib.HtmlDiff.make_file>` se puede personalizar "
+"usando un nuevo argumento de solo palabras clave *charset*. El juego de "
+"caracteres predeterminado del documento HTML cambió de ``\"ISO-8859-1\"`` a "
+"``\"utf-8\"``. (Contribución de Berker Peksag en :issue:`2052`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1070
 msgid ""
@@ -1737,10 +1742,13 @@ msgid ""
 "strings.  This fixes a regression from Python 2. (Contributed by Terry J. "
 "Reedy and Greg Ward in :issue:`17445`.)"
 msgstr ""
+"Ahora la función :func:`~difflib.diff_bytes` puede comparar listas de bytes "
+"de cadenas de caracteres. Esto arregla una regresión de Python 2. "
+"(Contribución de Terry J. Reedy y Greg Ward en :issue:`17445`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1076
 msgid "distutils"
-msgstr ""
+msgstr "distutils"
 
 #: ../Doc/whatsnew/3.5.rst:1078
 msgid ""
@@ -1748,6 +1756,9 @@ msgid ""
 "enable parallel building of extension modules. (Contributed by Antoine "
 "Pitrou in :issue:`5309`.)"
 msgstr ""
+"Ahora los comandos ``build`` y ``build_ext`` aceptan una opción ``-j`` para "
+"habilitar la construcción paralela de módulos de extensión. (Contribución de "
+"Antoine Pitrou en :issue:`5309`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1082
 msgid ""
@@ -1755,10 +1766,13 @@ msgid ""
 "enabled by passing ``xztar`` as an argument to ``bdist --format``. "
 "(Contributed by Serhiy Storchaka in :issue:`16314`.)"
 msgstr ""
+"Ahora el módulo :mod:`distutils` admite la compresión ``xz`` y se puede "
+"habilitar pasando ``xztar`` como un argumento a ``bdist --format``. "
+"(Contribución de Serhiy Storchaka en :issue:`16314`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1088
 msgid "doctest"
-msgstr ""
+msgstr "doctest"
 
 #: ../Doc/whatsnew/3.5.rst:1090
 msgid ""
@@ -1766,10 +1780,13 @@ msgid ""
 "TestSuite` if *module* contains no docstrings, instead of raising :exc:"
 "`ValueError`.  (Contributed by Glenn Jones in :issue:`15916`.)"
 msgstr ""
+"La función :func:`~doctest.DocTestSuite` devuelve una clase :class:`unittest."
+"TestSuite` vacía si *module* no contiene docstrings, en lugar de lanzar :exc:"
+"`ValueError`. (Contribución de Glenn Jones en :issue:`15916`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1096
 msgid "email"
-msgstr ""
+msgstr "email"
 
 #: ../Doc/whatsnew/3.5.rst:1098
 msgid ""
@@ -1779,6 +1796,12 @@ msgid ""
 "default is ``True`` for :attr:`~email.policy.compat32` and ``False`` for all "
 "other policies. (Contributed by Milan Oberkirch in :issue:`20098`.)"
 msgstr ""
+"Una nueva opción de directiva :attr:`Policy.mangle_from_ <email.policy."
+"Policy.mangle_from_>` controla si las líneas que empiecen o no con ``\"From "
+"\"`` en los cuerpos del correo electrónico tienen el prefijo de un caracter "
+"``\">\"`` por generadores. El valor predeterminado es ``True`` para :attr:"
+"`~email.policy.compat32` y ``False`` para todas las demás directivas. "
+"(Contribución de Milan Oberkirch en :issue:`20098`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1104
 msgid ""
@@ -1787,6 +1810,10 @@ msgid ""
 "for the :mailheader:`Content-Disposition` header. (Contributed by Abhilash "
 "Raj in :issue:`21083`.)"
 msgstr ""
+"Un nuevo método :meth:`Message.get_content_disposition() <email.message."
+"Message.get_content_disposition>` proporciona fácil acceso a un valor "
+"canónico para el encabezado :mailheader:`Content-Disposition`. (Contribución "
+"de Abhilash Raj en :issue:`21083`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1110
 msgid ""
@@ -1797,6 +1824,13 @@ msgid ""
 "`6531` ``SMTPUTF8`` extension.  (Contributed by R. David Murray in :issue:"
 "`24211`.)"
 msgstr ""
+"Una nueva opción de directiva :attr:`EmailPolicy.utf8 <email.policy."
+"EmailPolicy.utf8>` se puede configurar en ``True`` para codificar los "
+"encabezados de correo electrónico usando el juego de caracteres UTF-8 en "
+"lugar de utilizar palabras codificadas. Esto permite formatear ``Messages`` "
+"de acuerdo a :rfc:`6532` y usarlos con un servidor SMTP que admita la "
+"extensión :rfc:`6531` ``SMTPUTF8``. (Contribución de R. David Murray en :"
+"issue:`24211`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1117
 msgid ""
@@ -1804,24 +1838,30 @@ msgid ""
 "accepts a :class:`charset.Charset <email.charset.Charset>` instance. "
 "(Contributed by Claude Paroz and Berker Peksag in :issue:`16324`.)"
 msgstr ""
+"Ahora el constructor :class:`mime.text.MIMEText <email.mime.text.MIMEText>` "
+"admite una instancia de :class:`charset.Charset <email.charset.Charset>`. "
+"(Contribución de Claude Paroz y Berker Peksag en :issue:`16324`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1123
 msgid "enum"
-msgstr ""
+msgstr "enum"
 
 #: ../Doc/whatsnew/3.5.rst:1125
 msgid ""
 "The :class:`~enum.Enum` callable has a new parameter *start* to specify the "
 "initial number of enum values if only *names* are provided::"
 msgstr ""
+"La clase invocable :class:`~enum.Enum` tiene un nuevo parámetro *start* para "
+"especificar el número inicial de los valores de enumeración si solo se "
+"proporcionan *names*::"
 
 #: ../Doc/whatsnew/3.5.rst:1134
 msgid "(Contributed by Ethan Furman in :issue:`21706`.)"
-msgstr ""
+msgstr "(Contribución de Ethan Furman en :issue:`21706`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1138
 msgid "faulthandler"
-msgstr ""
+msgstr "faulthandler"
 
 #: ../Doc/whatsnew/3.5.rst:1140
 msgid ""
@@ -1830,10 +1870,14 @@ msgid ""
 "dump_traceback_later` functions now accept file descriptors in addition to "
 "file-like objects. (Contributed by Wei Wu in :issue:`23566`.)"
 msgstr ""
+"Ahora las funciones :func:`~faulthandler.enable`, :func:`~faulthandler."
+"register`, :func:`~faulthandler.dump_traceback` y :func:`~faulthandler."
+"dump_traceback_later` aceptan descriptores de archivo además de objetos "
+"similares a archivos. (Contribución de Wei Wu en :issue:`23566`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1148
 msgid "functools"
-msgstr ""
+msgstr "functools"
 
 #: ../Doc/whatsnew/3.5.rst:1152
 msgid ""
@@ -1841,10 +1885,13 @@ msgid ""
 "making it significantly faster.  (Contributed by Matt Joiner, Alexey "
 "Kachayev, and Serhiy Storchaka in :issue:`14373`.)"
 msgstr ""
+"Ahora la mayoría de la maquinaria de :func:`~functools.lru_cache` se "
+"implementa en C, lo que la hace significativamente más rápida. (Contribución "
+"de Matt Joiner, Alexey Kachayev y Serhiy Storchaka en :issue:`14373`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1158
 msgid "glob"
-msgstr ""
+msgstr "glob"
 
 #: ../Doc/whatsnew/3.5.rst:1160
 msgid ""
@@ -1852,10 +1899,13 @@ msgid ""
 "recursive search in subdirectories, using the ``\"**\"`` pattern. "
 "(Contributed by Serhiy Storchaka in :issue:`13968`.)"
 msgstr ""
+"Ahora las funciones :func:`~glob.iglob` y :func:`~glob.glob` admiten "
+"búsquedas recursivas en subdirectorios usando el patrón ``\"**\"``. "
+"(Contribución de Serhiy Storchaka en :issue:`13968`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1166
 msgid "gzip"
-msgstr ""
+msgstr "gzip"
 
 #: ../Doc/whatsnew/3.5.rst:1168
 msgid ""
@@ -1863,10 +1913,13 @@ msgid ""
 "\"x\"`` to request exclusive creation. (Contributed by Tim Heaney in :issue:"
 "`19222`.)"
 msgstr ""
+"Ahora el argumento *mode* del constructor de :class:`~gzip.GzipFile` acepta "
+"``\"x\"`` para solicitar la creación exclusiva. (Contribución de Tim Heaney "
+"en :issue:`19222`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1174
 msgid "heapq"
-msgstr ""
+msgstr "heapq"
 
 #: ../Doc/whatsnew/3.5.rst:1176
 msgid ""
@@ -1875,14 +1928,18 @@ msgid ""
 "optional *reverse* keyword argument can be used to reverse element "
 "comparison::"
 msgstr ""
+"Ahora la comparación de elementos en :func:`~heapq.merge` se puede "
+"personalizar pasando una :term:`key function` en un nuevo argumento de "
+"palabra clave opcional *key*, y un nuevo argumento de palabra clave opcional "
+"*reverse* se puede usar para revertir la comparación de elementos::"
 
 #: ../Doc/whatsnew/3.5.rst:1189
 msgid "(Contributed by Raymond Hettinger in :issue:`13742`.)"
-msgstr ""
+msgstr "(Contribución de Raymond Hettinger en :issue:`13742`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1193
 msgid "http"
-msgstr ""
+msgstr "http"
 
 #: ../Doc/whatsnew/3.5.rst:1195
 msgid ""
@@ -1890,10 +1947,13 @@ msgid ""
 "status codes, reason phrases and long descriptions written in English. "
 "(Contributed by Demian Brecht in :issue:`21793`.)"
 msgstr ""
+"Una nueva enumeración :class:`HTTPStatus <http.HTTPStatus>` que define un "
+"conjunto de códigos de estado HTTP, frases de motivo y descripciones largas "
+"escritas en inglés. (Contribución de Demian Brecht en :issue:`21793`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1201
 msgid "http.client"
-msgstr ""
+msgstr "http.client"
 
 #: ../Doc/whatsnew/3.5.rst:1203
 msgid ""
@@ -1904,14 +1964,20 @@ msgid ""
 "raised, the client socket is now closed automatically, and will reconnect on "
 "the next request::"
 msgstr ""
+"Ahora :meth:`HTTPConnection.getresponse() <http.client.HTTPConnection."
+"getresponse>` lanza una excepción :exc:`~http.client.RemoteDisconnected` "
+"cuando una conexión de servidor remoto se cierra inesperadamente. Además, si "
+"se lanza una excepción :exc:`ConnectionError` (del cual "
+"``RemoteDisconnected`` es una subclase), ahora el socket del cliente se "
+"cierra automáticamente y se reconectará en la siguiente solicitud::"
 
 #: ../Doc/whatsnew/3.5.rst:1219
 msgid "(Contributed by Martin Panter in :issue:`3566`.)"
-msgstr ""
+msgstr "(Contribución de Martin Panter en :issue:`3566`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1223
 msgid "idlelib and IDLE"
-msgstr ""
+msgstr "idlelib e IDLE"
 
 #: ../Doc/whatsnew/3.5.rst:1225
 msgid ""
@@ -1921,10 +1987,16 @@ msgid ""
 "well as changes made in future 3.5.x releases. This file is also available "
 "from the IDLE :menuselection:`Help --> About IDLE` dialog."
 msgstr ""
+"Desde que idlelib implementa el shell y el editor IDLE y no se destina para "
+"ser importado por otros programas, obtiene mejoras con cada versión. "
+"Consultar :file:`Lib/idlelib/NEWS.txt` para una lista acumulativa de cambios "
+"desde la 3.4.0, así como los cambios realizados en futuras versiones 3.5.x. "
+"Este archivo también está disponible en IDLE :menuselection:`Help --> About "
+"IDLE`."
 
 #: ../Doc/whatsnew/3.5.rst:1233
 msgid "imaplib"
-msgstr ""
+msgstr "imaplib"
 
 #: ../Doc/whatsnew/3.5.rst:1235
 msgid ""
@@ -1933,6 +2005,10 @@ msgid ""
 "command will be called automatically at the end of the block. (Contributed "
 "by Tarek Ziadé and Serhiy Storchaka in :issue:`4972`.)"
 msgstr ""
+"Ahora la clase :class:`~imaplib.IMAP4` admite el protocolo :term:`context "
+"manager`. Cuando se utiliza en una declaración :keyword:`with`, el comando "
+"IMAP4 ``LOGOUT`` se llamará automáticamente al final del bloque. "
+"(Contribución de Tarek Ziadé y Serhiy Storchaka en :issue:`4972`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1240
 msgid ""
@@ -1943,6 +2019,12 @@ msgid ""
 "enabled. (Contributed by Milan Oberkirch, R. David Murray, and Maciej Szulik "
 "in :issue:`21800`.)"
 msgstr ""
+"Ahora el módulo :mod:`imaplib` admite :rfc:`5161` (extensión ENABLE) y :rfc:"
+"`6855` (soporte UTF-8) a través del método :meth:`IMAP4.enable() <imaplib."
+"IMAP4.enable>`. Un nuevo atributo :attr:`IMAP4.utf8_enabled <imaplib.IMAP4."
+"utf8_enabled>` rastrea si el soporte con :rfc:`6855` está habilitado o no. "
+"(Contribución de Milan Oberkirch, R. David Murray y Maciej Szulik en :issue:"
+"`21800`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1247
 msgid ""
@@ -1950,10 +2032,13 @@ msgid ""
 "usernames and passwords using UTF-8, as recommended by the RFCs.  "
 "(Contributed by Milan Oberkirch in :issue:`21800`.)"
 msgstr ""
+"Ahora el módulo :mod:`imaplib` codifica automáticamente nombres de usuario y "
+"contraseñas de cadenas de caracteres no ASCII usando UTF-8, como recomiendan "
+"las RFCs. (Contribución de Milan Oberkirch en :issue:`21800`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1253
 msgid "imghdr"
-msgstr ""
+msgstr "imghdr"
 
 #: ../Doc/whatsnew/3.5.rst:1255
 msgid ""
@@ -1962,6 +2047,10 @@ msgid ""
 "issue:`20295`), and the `WebP <https://en.wikipedia.org/wiki/WebP>`_ format "
 "(contributed by Fabrice Aneche and Claudiu Popa in :issue:`20197`.)"
 msgstr ""
+"Ahora la función :func:`~imghdr.what` reconoce el formato `OpenEXR <http://"
+"www.openexr.com>`_ (contribución de Martin Vignali y Claudiu Popa en :issue:"
+"`20295`) y el formato `WebP <https://en.wikipedia.org/wiki/WebP>`_ "
+"(contribución de Fabrice Aneche y Claudiu Popa en :issue:`20197`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1263
 msgid "importlib"
