Traduccion de whatsnew/2.7 al 32%

--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-02-28 18:31-0300\n"
+"PO-Revision-Date: 2021-03-23 18:50-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1407,6 +1407,16 @@ msgid ""
 "objects in the oldest generation.  (Suggested by Martin von Löwis and "
 "implemented by Antoine Pitrou; :issue:`4074`.)"
 msgstr ""
+"El recolector de elementos no utilizados ahora funciona mejor para un patrón "
+"de uso común: cuando se asignan muchos objetos sin desasignar ninguno de "
+"ellos.  Esto anteriormente tomaría tiempo cuadrático para la recolección de "
+"elementos no utilizados, pero ahora el número de colecciones de elementos no "
+"utilizados completas se reduce a medida que crece el número de objetos en el "
+"montón. La nueva lógica solo realiza un paso completo de recolección de "
+"elementos no utilizados cuando la generación media se ha recopilado 10 veces "
+"y cuando el número de objetos supervivientes de la generación media supera "
+"el 10% del número de objetos de la generación más antigua.  (Sugerido por "
+"Martin von Löwis e implementado por Antoine Pitrou; :issue:`4074`.)"
 
 #: ../Doc/whatsnew/2.7.rst:947
 msgid ""
