--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-03-30 03:52-0600\n"
+"PO-Revision-Date: 2021-03-31 18:37-0600\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3162,7 +3162,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.5.rst:1888
 msgid "tarfile"
-msgstr ""
+msgstr "tarfile"
 
 #: ../Doc/whatsnew/3.5.rst:1890
 msgid ""
@@ -3170,6 +3170,9 @@ msgid ""
 "\"`` to request exclusive creation.  (Contributed by Berker Peksag in :issue:"
 "`21717`.)"
 msgstr ""
+"Ahora el argumento *mode* de la función :func:`~tarfile.open` acepta ``\"x"
+"\"`` para solicitar una creación exclusiva. (Contribución de Berker Peksag "
+"en :issue:`21717`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1893
 msgid ""
@@ -3181,6 +3184,14 @@ msgid ""
 "prior to 3.5), they will be owned by the named user and group in the "
 "tarfile. (Contributed by Michael Vogt and Eric Smith in :issue:`23193`.)"
 msgstr ""
+"Ahora los métodos :meth:`TarFile.extractall() <tarfile.TarFile.extractall>` "
+"y :meth:`TarFile.extract() <tarfile.TarFile.extract>` toman un argumento de "
+"palabra clave *numeric_owner*. Si se establece como ``True``, los archivos y "
+"directorios extraídos serán propiedad de los números ``uid`` y ``gid`` del "
+"archivo tar. Si se establece como ``False`` (el valor predeterminado y el "
+"comportamiento en versiones anteriores a la 3.5), serán propiedad del "
+"usuario y el grupo nombrados en el archivo tar. (Contribución de Michael "
+"Vogt y Eric Smith en :issue:`23193`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1901
 msgid ""
@@ -3189,10 +3200,14 @@ msgid ""
 "by :meth:`TarFile.getmembers() <tarfile.TarFile.getmembers>`. (Contributed "
 "by Serhiy Storchaka in :issue:`21549`.)"
 msgstr ""
+"Ahora :meth:`TarFile.list() <tarfile.TarFile.list>` acepta un argumento de "
+"palabra clave opcional *members* que se puede establecer en un subconjunto "
+"de la lista retornada por :meth:`TarFile.getmembers() <tarfile.TarFile."
+"getmembers>`. (Contribución de Serhiy Storchaka en :issue:`21549`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1908
 msgid "threading"
-msgstr ""
+msgstr "threading"
 
 #: ../Doc/whatsnew/3.5.rst:1910
 msgid ""
@@ -3200,20 +3215,26 @@ msgid ""
 "acquire() <threading.RLock.acquire>` methods now use a monotonic clock for "
 "timeout management. (Contributed by Victor Stinner in :issue:`22043`.)"
 msgstr ""
+"Ahora los métodos :meth:`Lock.acquire() <threading.Lock.acquire>` y :meth:"
+"`RLock.acquire() <threading.RLock.acquire>` usan un reloj monótono para la "
+"administración del tiempo de espera. (Contribución de Victor Stinner en :"
+"issue:`22043`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1917
 msgid "time"
-msgstr ""
+msgstr "time"
 
 #: ../Doc/whatsnew/3.5.rst:1919
 msgid ""
 "The :func:`~time.monotonic` function is now always available. (Contributed "
 "by Victor Stinner in :issue:`22043`.)"
 msgstr ""
+"Ahora la función :func:`~time.monotonic` siempre está disponible. "
+"(Contribución de Victor Stinner en :issue:`22043`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1924
 msgid "timeit"
-msgstr ""
+msgstr "timeit"
 
 #: ../Doc/whatsnew/3.5.rst:1926
 msgid ""
@@ -3221,6 +3242,10 @@ msgid ""
 "specify the time unit for the timer output.  Supported options are ``usec``, "
 "``msec``, or ``sec``.  (Contributed by Julian Gindi in :issue:`18983`.)"
 msgstr ""
+"Una nueva opción de línea de comando ``-u`` o :samp:`--unit={U}` se puede "
+"usar para especificar la unidad de tiempo para la salida del temporizador. "
+"Las opciones que se admiten son ``usec``, ``msec`` o ``sec``. (Contribución "
+"de Julian Gindi en :issue:`18983`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1930
 msgid ""
@@ -3228,10 +3253,13 @@ msgid ""
 "specifying the namespace in which the code will be running. (Contributed by "
 "Ben Roberts in :issue:`2527`.)"
 msgstr ""
+"La función :func:`~timeit.timeit` tiene un nuevo parámetro *globals* para "
+"especificar el espacio de nombres donde el código se ejecutará. "
+"(Contribución de Ben Roberts en :issue:`2527`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1936
 msgid "tkinter"
-msgstr ""
+msgstr "tkinter"
 
 #: ../Doc/whatsnew/3.5.rst:1938
 msgid ""
@@ -3240,10 +3268,14 @@ msgid ""
 "module which makes no permanent changes to environment variables. "
 "(Contributed by Zachary Ware in :issue:`20035`.)"
 msgstr ""
+"El módulo :mod:`tkinter._fix` que se usaba para configurar el entorno Tcl/Tk "
+"en Windows se reemplazó por una función privada en el módulo :mod:`_tkinter` "
+"que no hace cambios permanentes en las variables de entorno. (Contribución "
+"de Zachary Ware en :issue:`20035`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1947
 msgid "traceback"
-msgstr ""
+msgstr "traceback"
 
 #: ../Doc/whatsnew/3.5.rst:1949
 msgid ""
@@ -3251,6 +3283,9 @@ msgid ""
 "to conveniently traverse frame and traceback objects. (Contributed by Robert "
 "Collins in :issue:`17911`.)"
 msgstr ""
+"Las nuevas funciones :func:`~traceback.walk_stack` y :func:`~traceback."
+"walk_tb` atraviesan convenientemente objetos de marco y rastreo. "
+"(Contribución de Robert Collins en :issue:`17911`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1953
 msgid ""
@@ -3258,6 +3293,9 @@ msgid ""
 "`~traceback.StackSummary`, and :class:`~traceback.FrameSummary`. "
 "(Contributed by Robert Collins in :issue:`17911`.)"
 msgstr ""
+"Nuevas clases ligeras: :class:`~traceback.TracebackException`, :class:"
+"`~traceback.StackSummary` y :class:`~traceback.FrameSummary`. (Contribución "
+"de Robert Collins en :issue:`17911`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1957
 msgid ""
@@ -3265,10 +3303,13 @@ msgid ""
 "functions now support negative values for the *limit* argument. (Contributed "
 "by Dmitry Kazakov in :issue:`22619`.)"
 msgstr ""
+"Ahora las funciones :func:`~traceback.print_tb` y :func:`~traceback."
+"print_stack` admiten valores negativos para el argumento *limit*. "
+"(Contribución de Dmitry Kazakov en :issue:`22619`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1963
 msgid "types"
-msgstr ""
+msgstr "types"
 
 #: ../Doc/whatsnew/3.5.rst:1965
 msgid ""
@@ -3277,6 +3318,10 @@ msgid ""
 "Generator>` objects into :term:`awaitables <awaitable>`. (Contributed by "
 "Yury Selivanov in :issue:`24017`.)"
 msgstr ""
+"Una nueva función :func:`~types.coroutine` para transformar un :term:"
+"`iterador generador <generator iterator>` y objetos :class:`generator-like "
+"<collections.abc.Generator>` en :term:`aguardables <awaitable>`. "
+"(Contribución de Yury Selivanov en :issue:`24017`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1971
 msgid ""
@@ -3284,20 +3329,25 @@ msgid ""
 "`coroutine` objects created by :keyword:`async def` functions. (Contributed "
 "by Yury Selivanov in :issue:`24400`.)"
 msgstr ""
+"Un nuevo tipo llamado :class:`~types.CoroutineType`, el cual se usa para "
+"objetos :term:`coroutine` creados por funciones :keyword:`async def`. "
+"(Contribución de Yury Selivanov en :issue:`24400`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1977
 msgid "unicodedata"
-msgstr ""
+msgstr "unicodedata"
 
 #: ../Doc/whatsnew/3.5.rst:1979
 msgid ""
 "The :mod:`unicodedata` module now uses data from `Unicode 8.0.0 <http://"
 "unicode.org/versions/Unicode8.0.0/>`_."
 msgstr ""
+"Ahora el módulo :mod:`unicodedata` usa datos de `Unicode 8.0.0 <http://"
+"unicode.org/versions/Unicode8.0.0/>`_."
 
 #: ../Doc/whatsnew/3.5.rst:1984
 msgid "unittest"
-msgstr ""
+msgstr "unittest"
 
 #: ../Doc/whatsnew/3.5.rst:1986
 msgid ""
@@ -3309,6 +3359,13 @@ msgid ""
 "pattern. (Contributed by Robert Collins and Barry A. Warsaw in :issue:"
 "`16662`.)"
 msgstr ""
+"Ahora el método :meth:`TestLoader.loadTestsFromModule() <unittest.TestLoader."
+"loadTestsFromModule>` acepta un solo argumento de palabra clave *pattern* "
+"que se pasa a ``load_tests`` como el tercer argumento. Ahora los paquetes "
+"encontrados se verifican en busca de ``load_tests`` independientemente de si "
+"su ruta coincide con *pattern*, porque es imposible que el nombre de un "
+"paquete coincida con el modelo predeterminado. (Contribución de Robert "
+"Collins y Barry A. Warsaw en :issue:`16662`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1993
 msgid ""
@@ -3316,20 +3373,25 @@ msgid ""
 "<unittest.TestLoader.errors>` attribute of the :class:`~unittest.TestLoader` "
 "instance. (Contributed by Robert Collins in :issue:`19746`.)"
 msgstr ""
+"Ahora los errores de descubrimiento de unittest se exponen en el atributo :"
+"data:`TestLoader.errors <unittest.TestLoader.errors>` de la instancia :class:"
+"`~unittest.TestLoader`. (Contribución de Robert Collins en :issue:`19746`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1998
 msgid ""
 "A new command line option ``--locals`` to show local variables in "
 "tracebacks.  (Contributed by Robert Collins in :issue:`22936`.)"
 msgstr ""
+"Una nueva opción de línea de comando ``--locals`` muestra variables locales "
+"en rastreo. (Contribución de Robert Collins en :issue:`22936`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2003
 msgid "unittest.mock"
-msgstr ""
+msgstr "unittest.mock"
 
 #: ../Doc/whatsnew/3.5.rst:2005
 msgid "The :class:`~unittest.mock.Mock` class has the following improvements:"
-msgstr ""
+msgstr "La clase :class:`~unittest.mock.Mock` tiene las siguientes mejoras:"
 
 #: ../Doc/whatsnew/3.5.rst:2007
 msgid ""
@@ -3337,6 +3399,10 @@ msgid ""
 "objects to raise :exc:`AttributeError` on attribute names starting with ``"
 "\"assert\"``. (Contributed by Kushal Das in :issue:`21238`.)"
 msgstr ""
+"El constructor de la clase tiene un nuevo parámetro *unsafe*, que hace que "
+"los objetos simulados lancen :exc:`AttributeError` en los nombres de "
+"atributo que comienzan con ``\"assert\"``. (Contribución de Kushal Das en :"
+"issue:`21238`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2012
 msgid ""
@@ -3344,6 +3410,9 @@ msgid ""
 "assert_not_called>` method to check if the mock object was called. "
 "(Contributed by Kushal Das in :issue:`21262`.)"
 msgstr ""
+"Un nuevo método :meth:`Mock.assert_not_called() <unittest.mock.Mock."
+"assert_not_called>` para verificar si se llamó el objeto simulado. "
+"(Contribución de Kushal Das en :issue:`21262`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2016
 msgid ""
@@ -3352,6 +3421,10 @@ msgid ""
 "(Contributed by Johannes Baiter in :issue:`20968`, and Håkan Lövdahl in :"
 "issue:`23581` and :issue:`23568`.)"
 msgstr ""
+"Ahora la clase :class:`~unittest.mock.MagicMock` admite los operadores :meth:"
+"`__truediv__`, :meth:`__divmod__` y :meth:`__matmul__`. (Contribución de "
+"Johannes Baiter en :issue:`20968` y de Håkan Lövdahl en :issue:`23581` y :"
+"issue:`23568`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2021
 msgid ""
@@ -3359,10 +3432,13 @@ msgid ""
 "`~unittest.mock.patch` function when patching builtin names. (Contributed by "
 "Kushal Das in :issue:`17660`.)"
 msgstr ""
+"Ya no es necesario pasar explícitamente ``create=True`` a la función :func:"
+"`~unittest.mock.patch` cuando se parchean los nombres incorporados. "
+"(Contribución de Kushal Das en :issue:`17660`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2027
 msgid "urllib"
-msgstr ""
+msgstr "urllib"
 
 #: ../Doc/whatsnew/3.5.rst:2029
 msgid ""
@@ -3374,6 +3450,14 @@ msgid ""
 "a ``401`` if the ``Authorization`` header is not sent. (Contributed by Matej "
 "Cepl in :issue:`19494` and Akshit Khurana in :issue:`7159`.)"
 msgstr ""
+"Una nueva clase :class:`request.HTTPPasswordMgrWithPriorAuth <urllib.request."
+"HTTPPasswordMgrWithPriorAuth>` permite que se administren las credenciales "
+"de autenticación básica HTTP para eliminar el manejo innecesario de "
+"respuestas ``401`` o enviar credenciales incondicionalmente en la primera "
+"solicitud para comunicarse con los servidores que retornen una respuesta "
+"``404`` en lugar de un ``401`` si el encabezado ``Authorization`` no se "
+"envía. (Contribución de Matej Cepl en :issue:`19494` y de Akshit Khurana en :"
+"issue:`7159`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2038
 msgid ""
@@ -3381,6 +3465,10 @@ msgid ""
 "urlencode>` function provides a way to control the encoding of query parts "
 "if needed. (Contributed by Samwyse and Arnon Yaari in :issue:`13866`.)"
 msgstr ""
+"Un nuevo argumento *quote_via* para la función :func:`parse.urlencode() "
+"<urllib.parse.urlencode>` proporciona una forma de controlar la codificación "
+"de las partes de la consulta si es necesario. (Contribución de Samwyse y "
+"Arnon Yaari en :issue:`13866`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2043
 msgid ""
@@ -3388,6 +3476,9 @@ msgid ""
 "class:`ssl.SSLContext` object as a *context* argument, which will be used "
 "for the HTTPS connection.  (Contributed by Alex Gaynor in :issue:`22366`.)"
 msgstr ""
+"La función :func:`request.urlopen() <urllib.request.urlopen>` acepta un "
+"objeto :class:`ssl.SSLContext` como un argumento *context*, el cual se usará "
+"para la conexión HTTPS. (Contribución de Alex Gaynor en :issue:`22366`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2047
 msgid ""
@@ -3396,10 +3487,14 @@ msgid ""
 "`1808` and :rfc:`2396`. (Contributed by Demian Brecht and Senthil Kumaran "
 "in :issue:`22118`.)"
 msgstr ""
+"Se actualizó :func:`parse.urljoin() <urllib.parse.urljoin>` para usar la "
+"semántica :rfc:`3986` para la resolución de URL relativas, en lugar de :rfc:"
+"`1808` y :rfc:`2396`. (Contribución de Demian Brecht y Senthil Kumaran en :"
+"issue:`22118`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2054
 msgid "wsgiref"
-msgstr ""
+msgstr "wsgiref"
 
 #: ../Doc/whatsnew/3.5.rst:2056
 msgid ""
@@ -3407,10 +3502,13 @@ msgid ""
 "Headers>` class constructor is now optional. (Contributed by Pablo Torres "
 "Navarrete and SilentGhost in :issue:`5800`.)"
 msgstr ""
+"Ahora el argumento *headers* del constructor de la clase :class:`headers."
+"Headers <wsgiref.headers.Headers>` es opcional. (Contribución de Pablo "
+"Torres Navarrete y SilentGhost en :issue:`5800`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2062
 msgid "xmlrpc"
-msgstr ""
+msgstr "xmlrpc"
 
 #: ../Doc/whatsnew/3.5.rst:2064
 msgid ""
@@ -3418,6 +3516,9 @@ msgid ""
 "supports the :term:`context manager` protocol. (Contributed by Claudiu Popa "
 "in :issue:`20627`.)"
 msgstr ""
+"Ahora la clase :class:`client.ServerProxy <xmlrpc.client.ServerProxy>` "
+"admite el protocolo :term:`context manager`. (Contribución de Claudiu Popa "
+"en :issue:`20627`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2068
 msgid ""
@@ -3425,10 +3526,13 @@ msgid ""
 "accepts an optional :class:`ssl.SSLContext` instance. (Contributed by Alex "
 "Gaynor in :issue:`22960`.)"
 msgstr ""
+"Ahora el constructor de :class:`client.ServerProxy <xmlrpc.client."
+"ServerProxy>` acepta una instancia opcional :class:`ssl.SSLContext`. "
+"(Contribución de Alex Gaynor en :issue:`22960`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2074
 msgid "xml.sax"
-msgstr ""
+msgstr "xml.sax"
 
 #: ../Doc/whatsnew/3.5.rst:2076
 msgid ""
@@ -3436,22 +3540,29 @@ msgid ""
 "InputSource <xml.sax.xmlreader.InputSource>` object. (Contributed by Serhiy "
 "Storchaka in :issue:`2175`.)"
 msgstr ""
+"Ahora los analizadores SAX admiten un flujo de caracteres del objeto :class:"
+"`xmlreader.InputSource <xml.sax.xmlreader.InputSource>`. (Contribución de "
+"Serhiy Storchaka en :issue:`2175`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2080
 msgid ""
 ":func:`~xml.sax.parseString` now accepts a :class:`str` instance. "
 "(Contributed by Serhiy Storchaka in :issue:`10590`.)"
 msgstr ""
+"Ahora :func:`~xml.sax.parseString` acepta una instancia :class:`str`. "
+"(Contribución de Serhiy Storchaka en :issue:`10590`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2085
 msgid "zipfile"
-msgstr ""
+msgstr "zipfile"
 
 #: ../Doc/whatsnew/3.5.rst:2087
 msgid ""
 "ZIP output can now be written to unseekable streams. (Contributed by Serhiy "
 "Storchaka in :issue:`23252`.)"
 msgstr ""
+"Ahora la salida ZIP se puede escribir en flujos inescrutables. (Contribución "
+"de Serhiy Storchaka en :issue:`23252`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2090
 msgid ""
@@ -3459,6 +3570,9 @@ msgid ""
 "now accepts ``\"x\"`` to request exclusive creation. (Contributed by Serhiy "
 "Storchaka in :issue:`21717`.)"
 msgstr ""
+"Ahora el argumento *mode* del método :meth:`ZipFile.open() <zipfile.ZipFile."
+"open>` acepta ``\"x\"`` para solicitar una creación exclusiva. (Contribución "
+"de Serhiy Storchaka en :issue:`21717`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2096
 msgid "Other module-level changes"
