--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -1,39 +1,43 @@
 # Copyright (C) 2001-2020, Python Software Foundation
 # This file is distributed under the same license as the Python package.
-# Maintained by the python-doc-es workteam. 
+# Maintained by the python-doc-es workteam.
 # docs-es@python.org / https://mail.python.org/mailman3/lists/docs-es.python.org/
 # Check https://github.com/python/python-docs-es/blob/3.8/TRANSLATORS to get the list of volunteers
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Python 3.8\n"
+"Project-Id-Version: Python 2.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2021-04-02 20:05+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: \n"
+"Language: es\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/whatsnew/2.4.rst:3
 msgid "What's New in Python 2.4"
-msgstr ""
+msgstr "Novedades en Python 2.4"
 
 #: ../Doc/whatsnew/2.4.rst:0
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: ../Doc/whatsnew/2.4.rst:5
 msgid "A.M. Kuchling"
-msgstr ""
+msgstr "A.M. Kuchling"
 
 #: ../Doc/whatsnew/2.4.rst:14
 msgid ""
 "This article explains the new features in Python 2.4.1, released on March "
 "30, 2005."
 msgstr ""
+"Este artículo explica las nuevas funcionalidades en Python 2.4.1 lanzadas el "
+"30 de marzo de 2005."
 
 #: ../Doc/whatsnew/2.4.rst:17
 msgid ""
@@ -43,6 +47,11 @@ msgid ""
 "function decorators and generator expressions; most other changes are to the "
 "standard library."
 msgstr ""
+"Python 2.4 es un lanzamiento de término medio. Esto significa que no se han "
+"introducido grandes cambios como en la versión 2.2 de Python pero si son más "
+"significativas que la versión 2.3. Lo más relevante de estas nuevas "
+"funcionalidades son los decoradores y generadores de expresiones, la mayor "
+"parte del resto de los cambios son a la librería estándar."
 
 #: ../Doc/whatsnew/2.4.rst:22
 msgid ""
@@ -50,6 +59,9 @@ msgid ""
 "bugs fixed between Python 2.3 and 2.4.  Both figures are likely to be "
 "underestimates."
 msgstr ""
+"De acuerdo al registro de cambios CVS , han sido aplicados 481 parches y 502 "
+"bugs han sido corregidos entre las versiones 2.3 y 2.4 de Python. Es posible "
+"que ambas cifras no concuerden con la realidad, podrían estar subestimadas."
 
 #: ../Doc/whatsnew/2.4.rst:25
 msgid ""
@@ -60,10 +72,17 @@ msgid ""
 "Often you will be referred to the PEP for a particular new feature for "
 "explanations of the implementation and design rationale."
 msgstr ""
+"Este artículo no pretende entregar una especificación completa y detallada "
+"de cada funcionalidad nueva, en vez de esto, se provee una breve descripción "
+"de las nuevas características. Para obtener más información se debe "
+"consultar la documentación oficial de Python 2.4, tal como la librería de "
+"referencia de Python y el manual de referencia de Python. Otra fuente de "
+"información es PEP (guía de estilo-mejoras de python) para buscar "
+"información sobre la implementación y fundamentación del diseño."
 
 #: ../Doc/whatsnew/2.4.rst:36
 msgid "PEP 218: Built-In Set Objects"
-msgstr ""
+msgstr "PEP 218: Objetos built-in"
 
 #: ../Doc/whatsnew/2.4.rst:38
 msgid ""
@@ -74,6 +93,13 @@ msgid ""
 "sequences, and for mathematical operations like unions, intersections, "
 "differences, and symmetric differences. ::"
 msgstr ""
+"Python 2.3 introdujo el módulo ´set´, implementaciones del lenguaje C de "
+"tipos de datos han sido agregados al core de Python como dos nuevos tipos "
+"built in. ´Set´ o conjuntos (iterable) y ´frozenset´conjuntos congelados "
+"(iterable) . Ellos proveen operaciones de alto rendimiento para pruebas de "
+"testing, eliminar datos duplicados de una secuencia y operaciones "
+"matemáticas como: Uniones, intersecciones, diferencias y diferencias "
+"simétricas. ::"
 
 #: ../Doc/whatsnew/2.4.rst:71
 msgid ""
@@ -81,6 +107,9 @@ msgid ""
 "is immutable and hashable, it may be used as a dictionary key or as a member "
 "of another set."
 msgstr ""
+"La función built-in frozenset() es la versión inmutable de set(). Como es "
+"inmutable y hashable (su valor no cambia), se puede usar como una llave de "
+"diccionario o como parte de otro set."
 
 #: ../Doc/whatsnew/2.4.rst:75
 msgid ""
@@ -88,20 +117,25 @@ msgid ""
 "you wish to subclass the :class:`Set` or :class:`ImmutableSet` classes.  "
 "There are currently no plans to deprecate the module."
 msgstr ""
+"El modulo set se encuentra en la librería estándar y puede ser útil si se "
+"desea usar una subclase de set o ImmutableSet classes. No existen planes de "
+"depreciación del modulo."
 
 #: ../Doc/whatsnew/2.4.rst:83
 msgid ":pep:`218` - Adding a Built-In Set Object Type"
-msgstr ""
+msgstr ":pep:`218` - Agregando un set de tipo de objeto incorporado"
 
 #: ../Doc/whatsnew/2.4.rst:83
 msgid ""
 "Originally proposed by Greg Wilson and ultimately implemented by Raymond "
 "Hettinger."
 msgstr ""
+"Originalmente propuesto por Greg Wilson e implementado en la posteridad por "
+"Raymond Hettinger."
 
 #: ../Doc/whatsnew/2.4.rst:90
 msgid "PEP 237: Unifying Long Integers and Integers"
-msgstr ""
+msgstr "PEP 237, Unificando tipos de datos enteros"
 
 #: ../Doc/whatsnew/2.4.rst:92
 msgid ""
@@ -112,6 +146,13 @@ msgid ""
 "(depending on your platform).  In 2.4, these expressions no longer produce a "
 "warning and instead produce a different result that's usually a long integer."
 msgstr ""
+"El prolongado proceso de transición para este PEP que comenzó en Python 2.2 "
+"ha dado un paso más adelante en Python 2.4. En la versión 2.3 ciertas "
+"operaciones de enteros podían comportarse diferente después de lanzar la "
+"unificación del tipo de dato int-long entregando alertas FutureWarning y "
+"retornando valores limitados a 32 o 64 bits dependiendo de su plataforma. En "
+"la versión 2.4 estas expresiones ya no producen alertas y en vez de eso "
+"entrega un resultado diferente que suele ser un entero largo."
 
 #: ../Doc/whatsnew/2.4.rst:99
 msgid ""
@@ -120,20 +161,27 @@ msgid ""
 "warning in 2.3, evaluating to 0 on 32-bit platforms.  In Python 2.4, this "
 "expression now returns the correct answer, 8589934592."
 msgstr ""
+"Las expresiones problemáticas son principalmente desplazamientos a la "
+"izquierda y constantes largas de hexadecimales y octales. Por ejemplo, ``2 "
+"<< 32``  entrega una alerta en la versión 2.3 y evalúa 0 en plataformas 32-"
+"bit. Ahora en Python 2.4 la expresión retorna la respuesta correcta, "
+"8589934592."
 
 #: ../Doc/whatsnew/2.4.rst:108
 msgid ":pep:`237` - Unifying Long Integers and Integers"
-msgstr ""
+msgstr ":pep:`237` - Unificando tipos de datos enteros"
 
 #: ../Doc/whatsnew/2.4.rst:108
 msgid ""
 "Original PEP written by Moshe Zadka and GvR.  The changes for 2.4 were "
 "implemented by  Kalle Svensson."
 msgstr ""
+"PEP original escrito por Moshe Zadka y GvR.  Los cambios a la versión 2.4 "
+"fueron implementados por Kalle Svensson."
 
 #: ../Doc/whatsnew/2.4.rst:115
 msgid "PEP 289: Generator Expressions"
-msgstr ""
+msgstr "PEP 289: Expresiones generadoras"
 
 #: ../Doc/whatsnew/2.4.rst:117
 msgid ""
@@ -146,6 +194,11 @@ msgid ""
 "large.  When trying to write a functionally-styled program, it would be "
 "natural to write something like::"
 msgstr ""
+"La funcionalidad iterator fue introducida en Python 2.2 y el modulo "
+"'itertools' hace mas fácil escribir programas que iteran sobre largos sets "
+"de datos sin tener todo el conjunto de datos en memoria en tiempo de "
+"ejecución. Las listas de comprensión no se ajustan adecuadamente pues "
+"producen en python una lista de objetos.contenido todos los ítems ::"
 
 #: ../Doc/whatsnew/2.4.rst:129
 msgid "instead of  ::"
@@ -157,6 +210,10 @@ msgid ""
 "dealing with a large number of link objects you'd have to write the second "
 "form to avoid having all link objects in memory at the same time."
 msgstr ""
+"La primera forma es mas concisa y quizás mas legible pero en caso de "
+"trabajar con un numero largo de objetos podría ser necesario el escribir una "
+"segunda linea para evitar tener los objetos enlazados en memoria al mismo "
+"tiempo."
 
 #: ../Doc/whatsnew/2.4.rst:140
 msgid ""
@@ -164,6 +221,10 @@ msgid ""
 "materialize the entire list; instead they create a generator that will "
 "return elements one by one.  The above example could be written as::"
 msgstr ""
+"Las expresiones generadoras trabajan de forma similar a las listas por "
+"comprensión pero no muestra la lista completa, en vez de eso se crea un "
+"generador que retornará los elementos uno a uno.\n"
+"El siguiente ejemplo podría ser escrito como:"
 
 #: ../Doc/whatsnew/2.4.rst:148
 msgid ""
@@ -172,6 +233,11 @@ msgid ""
 "so if you want to create an iterator that will be immediately passed to a "
 "function you could write::"
 msgstr ""
+"Los generadores de expresiones siempre tienen que ser escritos dentro de "
+"paréntesis como en el ejemplo descrito arriba. Los paréntesis señalan una "
+"llamada a la función que también se puede contar, entonces si se necesita "
+"crear un iterador que inmediatamente pasara a una función se podría "
+"escribir::"
 
 #: ../Doc/whatsnew/2.4.rst:155
 msgid ""
@@ -182,20 +248,29 @@ msgid ""
 "change this, making list comprehensions match generator expressions in this "
 "respect."
 msgstr ""
+"Las expresiones generadoras difieren de las listas de comprensión por "
+"pequeñas diferencias. La mas notable es que la variable del loop (*obj* en "
+"el ejemplo de arriba) no es accesible fuera de la expresión generadora. Las "
+"listas de comprensión dejan la variable asignada a su último valor, en "
+"versiones futuras de Python esto será cambiado en lo que respecta a hacer "
+"que las listas de comprensión coincidan con las expresiones de los "
+"generadores."
 
 #: ../Doc/whatsnew/2.4.rst:165
 msgid ":pep:`289` - Generator Expressions"
-msgstr ""
+msgstr ":pep:`289` - Expresiones generadoras"
 
 #: ../Doc/whatsnew/2.4.rst:165
 msgid ""
 "Proposed by Raymond Hettinger and implemented by Jiwon Seo with early "
 "efforts steered by Hye-Shik Chang."
 msgstr ""
+"Propuesto por Raymond Hettinger e implementada por Jiwon Seo con los "
+"primeros esfuerzos por Hye-Shik Chang."
 
 #: ../Doc/whatsnew/2.4.rst:172
 msgid "PEP 292: Simpler String Substitutions"
-msgstr ""
+msgstr "PEP 292 Sustituciones simples de cadenas de caracteres"
 
 #: ../Doc/whatsnew/2.4.rst:174
 msgid ""
@@ -203,10 +278,16 @@ msgid ""
 "for substituting variables into strings; this style of substitution may be "
 "better for applications where untrained users need to edit templates."
 msgstr ""
+"Algunas nuevas clases en la librería estándar entrega un mecanismo "
+"alternativo para sustituir variables dentro de cadenas de caracteres, este "
+"estilo de sustituciones puede ser mejor por aplicaciones donde usuarios sin "
+"experiencia necesitan editar plantillas."
 
 #: ../Doc/whatsnew/2.4.rst:178
 msgid "The usual way of substituting variables by name is the ``%`` operator::"
 msgstr ""
+"La manera usual de sustituir variables por el nombre es con el operador ``"
+"%`` :"
 
 #: ../Doc/whatsnew/2.4.rst:183
 msgid ""
@@ -220,12 +301,24 @@ msgid ""
 "users, and if they make a mistake, it's difficult to provide helpful "
 "feedback to them."
 msgstr ""
+"Cuando se escriben plantillas con cadenas de caracteres puede ser muy fácil "
+"olvidar el uso de ``i`` or ``s`` después de cerrar paréntesis. Esto no es un "
+"problema grande si se está dentro de un modulo de Python pues al correr el "
+"código se lanza el siguiente mensaje de error \"Unsupported format character"
+"\" :exc:`ValueError` y el problema se resuelve. Sin embargo, tener en cuenta "
+"que una aplicación como Mailman donde una plantilla de caracteres o "
+"traducciones son editadas por usuarios que no están familiarizados con "
+"Python. La sintaxis de como formatear las cadenas de caracteres es "
+"complicada de explicar para ciertos usuarios y si ellos cometen un error es "
+"una dificultad el entregar retroalimentación y ayuda."
 
 #: ../Doc/whatsnew/2.4.rst:192
 msgid ""
 "PEP 292 adds a :class:`Template` class to the :mod:`string` module that uses "
 "``$`` to indicate a substitution::"
 msgstr ""
+"PEP 292 agrega una :class:`Template` class a :mod:`string` al modulo que usa "
+"``$`` para indicar una sustitución::"
 
 #: ../Doc/whatsnew/2.4.rst:200
 msgid ""
@@ -233,18 +326,21 @@ msgid ""
 "raise a :exc:`KeyError`.  There's also a :meth:`safe_substitute` method that "
 "ignores missing keys::"
 msgstr ""
+"Si una llave se ha perdido desde el diccionario, el método `substitute` "
+"lanzará una :exc:`KeyError`. También el método `safe_substitute` que ignora "
+"las llaves perdidas::"
 
 #: ../Doc/whatsnew/2.4.rst:211
 msgid ":pep:`292` - Simpler String Substitutions"
-msgstr ""
+msgstr ":pep:`292` - Sustituciones simples de cadenas de caracteres"
 
 #: ../Doc/whatsnew/2.4.rst:212
 msgid "Written and implemented  by Barry Warsaw."
-msgstr ""
+msgstr "Escrito e implementado por Barry Warsaw."
 
 #: ../Doc/whatsnew/2.4.rst:218
 msgid "PEP 318: Decorators for Functions and Methods"
-msgstr ""
+msgstr "PEP 318: Decoradores para funciones y métodos"
 
 #: ../Doc/whatsnew/2.4.rst:220
 msgid ""
@@ -255,12 +351,21 @@ msgid ""
 "`staticmethod` or :func:`classmethod` function that would wrap up the "
 "function as a method of the new type. Your code would look like this::"
 msgstr ""
+"Python 2.2 extendió el modelo de objeto de Python añadiendo métodos "
+"estéticos y métodos de clase pero no se extendió la sintaxis de Python para "
+"proveer alguna nueva forma de definir métodos estáticos o de clase. En vez "
+"de eso se tenía que escribir la palabra clave `def` de manera usual y pasar "
+"el método resultante a la :func:`staticmethod` o a la :func:`classmethod` "
+"que podía agrupar la función como método de un nuevo tipo. El código podría "
+"verse como esto:"
 
 #: ../Doc/whatsnew/2.4.rst:233
 msgid ""
 "If the method was very long, it would be easy to miss or forget the :func:"
 "`classmethod` invocation after the function body."
 msgstr ""
+"Si el método era muy largo, era muy probable el perder o olvidar la  "
+"invocación :func:`classmethod` dentro del cuerpo de la función."
 
 #: ../Doc/whatsnew/2.4.rst:236
 msgid ""
@@ -270,6 +375,12 @@ msgid ""
 "access to the feature; a new syntactic feature has been added to meet this "
 "need."
 msgstr ""
+"La intención era siempre agregar alguna sintaxis que hicieran las "
+"definiciones mas entendibles pero al tiempo del lanzamiento de la versión "
+"2.2 una buena sintaxis no era clara. Al día de hoy una buena sintaxis aun no "
+"es clara pero los usuarios están preguntando por formas más fáciles de "
+"acceder a las características, entonces una nueva funcionalidad sintáctica "
+"ha sido añadida para satisfacer esta necesidad."
 
 #: ../Doc/whatsnew/2.4.rst:241
 msgid ""
@@ -278,22 +389,31 @@ msgid ""
 "additional information on a function object; they're *decorating* functions "
 "with more details."
 msgstr ""
+"La nueva característica es llamada decoradores de funciones. El nombre "
+"proviene de la idea de que :func:`classmethod`, :func:`staticmethod` son "
+"amigos y  guardan información adicional en un objeto de una función. ellos "
+"están decorando funciones con mas detalles."
 
 #: ../Doc/whatsnew/2.4.rst:246
 msgid ""
 "The notation borrows from Java and uses the ``'@'`` character as an "
 "indicator. Using the new syntax, the example above would be written::"
 msgstr ""
+"La notación proviene de Java y usa el ``'@'`` símbolo arroba como un "
+"indicador. Usando la nueva sintaxis el ejemplo descrito arriba podría ser "
+"escrito de la siguiente forma:"
 
 #: ../Doc/whatsnew/2.4.rst:256
 msgid ""
 "The ``@classmethod`` is shorthand for the ``meth=classmethod(meth)`` "
 "assignment. More generally, if you have the following::"
 msgstr ""
+"El ``@classmethod``  es un atajo para `meth=classmethod(meth)``. De forma "
+"general si se tiene lo siguiente:"
 
 #: ../Doc/whatsnew/2.4.rst:265
 msgid "It's equivalent to the following pre-decorator code::"
-msgstr ""
+msgstr "Es el equivalente para el siguiente código de pre decorador::"
 
 #: ../Doc/whatsnew/2.4.rst:270
 msgid ""
