--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -6,37 +6,41 @@
 # Check https://github.com/python/python-docs-es/blob/3.8/TRANSLATORS to
 # get the list of volunteers
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2021-04-05 21:00-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: \n"
+"Language: es\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/whatsnew/2.6.rst:5
 msgid "What's New in Python 2.6"
-msgstr ""
+msgstr "Qué hay de nuevo en Python 2.6"
 
 #: ../Doc/whatsnew/2.6.rst
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: ../Doc/whatsnew/2.6.rst:9
 msgid "A.M. Kuchling (amk at amk.ca)"
-msgstr ""
+msgstr "A.M. Kuchling (amk arroba amk.ca)"
 
 #: ../Doc/whatsnew/2.6.rst:52
 msgid ""
 "This article explains the new features in Python 2.6, released on October 1 "
 "2008.  The release schedule is described in :pep:`361`."
 msgstr ""
+"Este articulo explica las nuevas características en Python 2.6, publicado el "
+"1 de Octubre de 2008. El calendario de publicación se describe en :pep:`361`."
 
 #: ../Doc/whatsnew/2.6.rst:55
 msgid ""
@@ -48,6 +52,14 @@ msgid ""
 "compatibility functions in a :mod:`future_builtins` module and a :option:"
 "`!-3` switch to warn about usages that will become unsupported in 3.0."
 msgstr ""
+"El tema principal de Python 2.6 es preparar el camino de migración a Python "
+"3.0, un importante rediseño del lenguaje. Siempre que sea posible, Python "
+"2.6 incorpora nuevas características y sintaxis de 3.0 mientras sigue siendo "
+"compatible con el código existente al no eliminar características o sintaxis "
+"más antiguas. Cuando no es posible hacer eso, Python 2.6 intenta hacer lo "
+"que puede, agregando funciones de compatibilidad en el módulo :mod:"
+"`future_builtins` y un interruptor :option:`!-3` para advertir sobre usos "
+"que dejarán de ser compatibles en 3.0 ."
 
 #: ../Doc/whatsnew/2.6.rst:64
 msgid ""
@@ -55,6 +67,10 @@ msgid ""
 "as the :mod:`multiprocessing` and :mod:`json` modules, but there aren't many "
 "new features that aren't related to Python 3.0 in some way."
 msgstr ""
+"Se han agregado algunos paquetes nuevos importantes a la biblioteca "
+"estándar, como los módulos :mod:`multiprocessing` y :mod:` json`, pero no "
+"hay muchas características nuevas que no estén relacionadas con Python 3.0 "
+"de alguna manera."
 
 #: ../Doc/whatsnew/2.6.rst:69
 msgid ""
@@ -63,6 +79,10 @@ msgid ""
 "applied and 612 bugs fixed between Python 2.5 and 2.6.  Both figures are "
 "likely to be underestimates."
 msgstr ""
+"Python 2.6 también incluye una serie de mejoras y correcciones de errores en "
+"el código fuente. Una búsqueda en los registros de cambios encuentra que se "
+"aplicaron 259 parches y se corrigieron 612 errores entre Python 2.5 y 2.6. "
+"Es probable que ambas cifras estén subestimadas."
 
 #: ../Doc/whatsnew/2.6.rst:74
 msgid ""
@@ -73,10 +93,17 @@ msgid ""
 "particular new feature. Whenever possible, \"What's New in Python\" links to "
 "the bug/patch item for each change."
 msgstr ""
+"Este artículo no intenta proporcionar una especificación completa de las "
+"nuevas características, sino que proporciona una conveniente descripción "
+"general. Para obtener detalles completos, debe consultar la documentación de "
+"Python 2.6. Si desea comprender la justificación del diseño y la "
+"implementación, consulte el PEP de una característica nueva en particular. "
+"Siempre que sea posible, \"Qué hay de nuevo en Python\" enlaza con el "
+"elemento de error / parche para cada cambio."
 
 #: ../Doc/whatsnew/2.6.rst:90
 msgid "Python 3.0"
-msgstr ""
+msgstr "Python 3.0"
 
 #: ../Doc/whatsnew/2.6.rst:92
 msgid ""
@@ -198,7 +225,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:185
 msgid "https://bugs.python.org"
-msgstr ""
+msgstr "https://bugs.python.org"
 
 #: ../Doc/whatsnew/2.6.rst:185
 msgid "The Python bug tracker."
@@ -206,7 +233,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:188
 msgid "http://bugs.jython.org:"
-msgstr ""
+msgstr "http://bugs.jython.org:"
 
 #: ../Doc/whatsnew/2.6.rst:188
 msgid "The Jython bug tracker."
@@ -214,7 +241,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:191
 msgid "http://roundup.sourceforge.net/"
-msgstr ""
+msgstr "http://roundup.sourceforge.net/"
 
 #: ../Doc/whatsnew/2.6.rst:191
 msgid "Roundup downloads and documentation."
@@ -222,7 +249,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:193
 msgid "http://svn.python.org/view/tracker/importer/"
-msgstr ""
+msgstr "http://svn.python.org/view/tracker/importer/"
 
 #: ../Doc/whatsnew/2.6.rst:194
 msgid "Martin von Löwis's conversion scripts."
@@ -287,7 +314,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:239
 msgid "`Sphinx <http://sphinx-doc.org/>`__"
-msgstr ""
+msgstr "`Sphinx <http://sphinx-doc.org/>`__"
 
 #: ../Doc/whatsnew/2.6.rst:239
 msgid "Documentation and code for the Sphinx toolchain."
@@ -295,7 +322,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:241
 msgid "`Docutils <http://docutils.sourceforge.net>`__"
-msgstr ""
+msgstr "`Docutils <http://docutils.sourceforge.net>`__"
 
 #: ../Doc/whatsnew/2.6.rst:242
 msgid "The underlying reStructuredText parser and toolset."
@@ -610,7 +637,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:533
 msgid "Windows: :file:`%APPDATA%/Python`"
-msgstr ""
+msgstr "Windows: :file:`%APPDATA%/Python`"
 
 #: ../Doc/whatsnew/2.6.rst:535
 msgid ""
@@ -794,7 +821,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:791
 msgid "< (default)"
-msgstr ""
+msgstr "< (default)"
 
 #: ../Doc/whatsnew/2.6.rst:791
 msgid "Left-align"
@@ -802,7 +829,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:792
 msgid ">"
-msgstr ""
+msgstr ">"
 
 #: ../Doc/whatsnew/2.6.rst:792
 msgid "Right-align"
@@ -810,7 +837,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:793
 msgid "^"
-msgstr ""
+msgstr "^"
 
 #: ../Doc/whatsnew/2.6.rst:793
 msgid "Center"
@@ -818,7 +845,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:794
 msgid "="
-msgstr ""
+msgstr "="
 
 #: ../Doc/whatsnew/2.6.rst:794
 msgid "(For numeric types only) Pad after the sign."
@@ -839,7 +866,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:810
 msgid "``b``"
-msgstr ""
+msgstr "``b``"
 
 #: ../Doc/whatsnew/2.6.rst:810
 msgid "Binary. Outputs the number in base 2."
@@ -847,7 +874,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:811
 msgid "``c``"
-msgstr ""
+msgstr "``c``"
 
 #: ../Doc/whatsnew/2.6.rst:811
 msgid ""
@@ -857,7 +884,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:813
 msgid "``d``"
-msgstr ""
+msgstr "``d``"
 
 #: ../Doc/whatsnew/2.6.rst:813
 msgid "Decimal Integer. Outputs the number in base 10."
@@ -865,7 +892,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:814
 msgid "``o``"
-msgstr ""
+msgstr "``o``"
 
 #: ../Doc/whatsnew/2.6.rst:814
 msgid "Octal format. Outputs the number in base 8."
@@ -873,7 +900,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:815
 msgid "``x``"
-msgstr ""
+msgstr "``x``"
 
 #: ../Doc/whatsnew/2.6.rst:815
 msgid ""
@@ -883,7 +910,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:817
 msgid "``e``"
-msgstr ""
+msgstr "``e``"
 
 #: ../Doc/whatsnew/2.6.rst:817
 msgid ""
@@ -893,7 +920,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:819
 msgid "``g``"
-msgstr ""
+msgstr "``g``"
 
 #: ../Doc/whatsnew/2.6.rst:819
 msgid ""
@@ -903,7 +930,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:822
 msgid "``n``"
-msgstr ""
+msgstr "``n``"
 
 #: ../Doc/whatsnew/2.6.rst:822
 msgid ""
@@ -914,7 +941,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:825
 msgid "``%``"
-msgstr ""
+msgstr "``%``"
 
 #: ../Doc/whatsnew/2.6.rst:825
 msgid ""
@@ -936,7 +963,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:849
 msgid ":ref:`formatstrings`"
-msgstr ""
+msgstr ":ref:`formatstrings`"
 
 #: ../Doc/whatsnew/2.6.rst:849
 msgid "The reference documentation for format fields."
@@ -1481,7 +1508,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:1373
 msgid "This is equivalent to::"
-msgstr ""
+msgstr "Esto es equivalente a::"
 
 #: ../Doc/whatsnew/2.6.rst:1382
 msgid ":pep:`3129` - Class Decorators"
@@ -1489,7 +1516,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:1383
 msgid "PEP written by Collin Winter."
-msgstr ""
+msgstr "PEP escrita por Collin Winter."
 
 #: ../Doc/whatsnew/2.6.rst:1390
 msgid "PEP 3141: A Type Hierarchy for Numbers"
@@ -1557,7 +1584,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:1432
 msgid "PEP written by Jeffrey Yasskin."
-msgstr ""
+msgstr "PEP escrita por Jeffrey Yasskin."
 
 #: ../Doc/whatsnew/2.6.rst:1434
 msgid ""
@@ -2929,7 +2956,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:2582
 msgid "(:issue:`1513695`)"
-msgstr ""
+msgstr "(:issue:`1513695`)"
 
 #: ../Doc/whatsnew/2.6.rst:2584
 msgid ""
@@ -3685,7 +3712,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:3308
 msgid "Acknowledgements"
-msgstr ""
+msgstr "Agradecimientos"
 
 #: ../Doc/whatsnew/2.6.rst:3310
 msgid ""
